[build-system]

# setuptools-scm helps to find package-data which is tracked by git
# anyway, make sure the following packages are installed
# pip install build setuptools_scm
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]


name = "pyblocksim"
description = "Python library for block-oriented modeling and simulation in control theory"
authors=[{name = "Carsten Knoll", email = "firstname.lastname@tu-dresden.de"}]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU General Public License v3 (GPLv3)" }

dynamic = ["dependencies", "version"]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

# see also https://realpython.com/python-toml/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project.urls]
Homepage = "https://github.com/TUD-RST/pyblocksim"


[tool.setuptools.packages.find]
# note: `include-package-data = true` by default in pyproject.toml
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "pyblocksim.release.__version__"}
